New course storyboard placements done

--- a/Present/Base.lproj/Main.storyboard
+++ b/Present/Base.lproj/Main.storyboard
@@ -239,77 +239,118 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FBh-xg-aJQ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FBh-xg-aJQ">
                                 <rect key="frame" x="16" y="88" width="44" height="43.5"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1An-3b-fDG">
-                                <rect key="frame" x="85" y="95" width="96" height="30"/>
-                                <state key="normal" title="Upload Image">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Course Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxB-2j-OQ7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Course Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxB-2j-OQ7">
                                 <rect key="frame" x="16" y="151" width="133" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TPj-7e-vDw">
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TPj-7e-vDw">
                                 <rect key="frame" x="16" y="226" width="51" height="31"/>
                             </switch>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkd-Ie-ggS">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkd-Ie-ggS">
                                 <rect key="frame" x="16" y="180" width="358" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="358" id="UCF-Dx-sSu"/>
+                                    <constraint firstAttribute="height" constant="30" id="to8-vW-bPC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Late Option" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGX-Ke-p2y">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Late Option" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGX-Ke-p2y">
                                 <rect key="frame" x="73" y="231" width="90" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mark late after " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChM-ex-D0Q">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mark late after " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChM-ex-D0Q">
                                 <rect key="frame" x="17" y="274" width="116" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="minutes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVT-sn-4qb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="minutes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVT-sn-4qb">
                                 <rect key="frame" x="188" y="275" width="61" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K1D-FA-cKW">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K1D-FA-cKW">
                                 <rect key="frame" x="134" y="271" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6Cx-Qy-fbm"/>
+                                    <constraint firstAttribute="width" constant="46" id="s7B-9L-Fn3"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Roster" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJW-wJ-djm">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Roster" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJW-wJ-djm">
                                 <rect key="frame" x="16" y="309" width="70" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please enter AndrewIDs separated by commas." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9E-Zi-TbK">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please enter AndrewIDs separated by commas." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9E-Zi-TbK">
                                 <rect key="frame" x="17" y="333" width="364" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pgf-jH-btT">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pgf-jH-btT">
                                 <rect key="frame" x="17" y="362" width="362" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="362" id="9RK-Em-gB2"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1y-Rd-oY2">
-                                <rect key="frame" x="513" y="494" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1y-Rd-oY2">
+                                <rect key="frame" x="513" y="494" width="45" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Add">
+                                    <color key="titleColor" red="0.97761900229999998" green="1" blue="0.97336729050000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1An-3b-fDG">
+                                <rect key="frame" x="85" y="95" width="117" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Upload Image">
+                                    <color key="titleColor" red="0.97761900229999998" green="1" blue="0.97336729050000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SGX-Ke-p2y" firstAttribute="leading" secondItem="TPj-7e-vDw" secondAttribute="trailing" constant="8" id="4M3-Il-YHA"/>
+                            <constraint firstItem="FBh-xg-aJQ" firstAttribute="top" secondItem="NHj-Vd-KRm" secondAttribute="bottom" constant="24" id="6OV-4h-CF5"/>
+                            <constraint firstItem="ChM-ex-D0Q" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" constant="1" id="93r-nv-ph0"/>
+                            <constraint firstItem="FBh-xg-aJQ" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" id="D0g-Fs-Kxb"/>
+                            <constraint firstItem="hxB-2j-OQ7" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" id="HnV-Ab-QVm"/>
+                            <constraint firstItem="TPj-7e-vDw" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" id="PZq-q1-hB4"/>
+                            <constraint firstItem="1An-3b-fDG" firstAttribute="leading" secondItem="FBh-xg-aJQ" secondAttribute="trailing" constant="25" id="QKT-us-1oG"/>
+                            <constraint firstItem="pkd-Ie-ggS" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" id="YcH-NP-GVg"/>
+                            <constraint firstItem="ChM-ex-D0Q" firstAttribute="top" secondItem="TPj-7e-vDw" secondAttribute="bottom" constant="17" id="Ys2-Ad-99z"/>
+                            <constraint firstItem="vJW-wJ-djm" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" id="auI-Qw-XHF"/>
+                            <constraint firstItem="NGa-wD-kua" firstAttribute="top" secondItem="M1y-Rd-oY2" secondAttribute="bottom" constant="76" id="dXu-CV-4mf"/>
+                            <constraint firstItem="K1D-FA-cKW" firstAttribute="leading" secondItem="ChM-ex-D0Q" secondAttribute="trailing" constant="1" id="dip-zI-nMY"/>
+                            <constraint firstItem="u9E-Zi-TbK" firstAttribute="top" secondItem="vJW-wJ-djm" secondAttribute="bottom" constant="3" id="h0a-Uj-eZb"/>
+                            <constraint firstItem="Pgf-jH-btT" firstAttribute="top" secondItem="u9E-Zi-TbK" secondAttribute="bottom" constant="8" id="iYt-Tf-zfT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="M1y-Rd-oY2" secondAttribute="trailing" constant="26" id="nf6-bj-m1Z"/>
+                            <constraint firstItem="vJW-wJ-djm" firstAttribute="top" secondItem="ChM-ex-D0Q" secondAttribute="bottom" constant="14" id="o2j-RM-LjF"/>
+                            <constraint firstItem="Pgf-jH-btT" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" constant="1" id="qey-ES-8VZ"/>
+                            <constraint firstItem="SGX-Ke-p2y" firstAttribute="top" secondItem="pkd-Ie-ggS" secondAttribute="bottom" constant="21" id="ru1-wd-naO"/>
+                            <constraint firstItem="pkd-Ie-ggS" firstAttribute="top" secondItem="hxB-2j-OQ7" secondAttribute="bottom" constant="8" id="to4-OA-qlI"/>
+                            <constraint firstItem="TPj-7e-vDw" firstAttribute="top" secondItem="pkd-Ie-ggS" secondAttribute="bottom" constant="16" id="wwW-Ki-PEL"/>
+                            <constraint firstItem="hxB-2j-OQ7" firstAttribute="top" secondItem="NHj-Vd-KRm" secondAttribute="bottom" constant="87" id="xhj-R8-aGI"/>
+                            <constraint firstItem="1An-3b-fDG" firstAttribute="top" secondItem="NHj-Vd-KRm" secondAttribute="bottom" constant="31" id="ylV-wv-S9O"/>
+                            <constraint firstItem="u9E-Zi-TbK" firstAttribute="leading" secondItem="pOC-62-RoD" secondAttribute="leadingMargin" constant="1" id="zNZ-15-goh"/>
+                            <constraint firstItem="FVT-sn-4qb" firstAttribute="leading" secondItem="K1D-FA-cKW" secondAttribute="trailing" constant="8" id="ztS-ZL-kEN"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Course" id="jfj-sG-T7X"/>
                 </viewController>
