--- a/Present/Base.lproj/Main.storyboard
+++ b/Present/Base.lproj/Main.storyboard
@@ -358,6 +358,24 @@
             </objects>
             <point key="canvasLocation" x="1530" y="228"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="zzd-8M-uhT">
+            <objects>
+                <viewController id="6Ie-a2-a8u" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dEV-Lt-TCr"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dmf-yc-gQd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jYZ-2h-MBt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EXn-VZ-nuo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2195" y="241"/>
+        </scene>
         <!--Table View Controller-->
         <scene sceneID="hax-pS-dsv">
             <objects>
