Added sidebar controllers

--- a/Present/Base.lproj/Main.storyboard
+++ b/Present/Base.lproj/Main.storyboard
@@ -244,6 +244,56 @@
             </objects>
             <point key="canvasLocation" x="861" y="232"/>
         </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="m7d-q5-WBb">
+            <objects>
+                <viewController id="VKR-qA-zyv" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mhY-wn-HC6"/>
+                        <viewControllerLayoutGuide type="bottom" id="eVY-Lp-Fw9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HFd-0z-Yrz">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="ato-5X-sJV" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="pOD-nc-Pho"/>
+                        <segue destination="fEF-hd-HZ3" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="kMv-bI-GH5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="27H-9z-oHv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="692" y="1051"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="MjB-XM-nXi">
+            <objects>
+                <tableViewController id="ato-5X-sJV" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="LCW-rj-kDQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="EHg-4Z-cOa">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EHg-4Z-cOa" id="orO-10-qJF">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ato-5X-sJV" id="v1l-Ti-cZs"/>
+                            <outlet property="delegate" destination="ato-5X-sJV" id="c8D-xc-aQP"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oUF-e0-3Gs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1430" y="1059"/>
+        </scene>
         <!--New Course-->
         <scene sceneID="8Aq-7I-9aX">
             <objects>
@@ -392,4 +442,7 @@
     <resources>
         <image name="logo" width="1659" height="1536"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="kMv-bI-GH5"/>
+    </inferredMetricsTieBreakers>
 </document>
